# convex-hull-exjobb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  createtests.sh  plot_results.py  plot_results2.py  run_implementations.py  runmimictests.sh  runmimictestsqhull.py  runtests.sh  test_params.py  test_qh_hybrid.py  test_threads.py  testlib.py
measurement_scripts/: measure_pcm_utils.sh  measure_qh_bf.sh  measure_qh_bf_par.sh  measure_qh_partitioning.sh  run_pcm.py
mimic-extraction/: README.md  chgen_functions.py  create_data_sets.py  mimicExtraction.ipynb
mimic-extraction/sql-queries/: chartevents_numeric.sql  chartevents_numeric_mimiciv.sql  ventilation_durations.sql  ventilation_durations_mimiciv.sql
src/: hull_impl.cpp  hull_impl.hpp  main.cpp  pcm.cpp  pcm.hpp  perf_data.cpp  perf_data.hpp  point.hpp  slice_parallel.cpp  slice_parallel.hpp  soa_points.cpp  soa_points.hpp
src/implementations/: cgal.cpp  chan.cpp  chan.hpp  chan_idea_3.cpp  chen.cpp  common.hpp  dc_preparata_hong.cpp  dc_preparata_hong_old.cpp  dc_preparata_hong_rewrite.cpp  impl1.cpp  impl1.hpp  jarvis_wrap.cpp  jarvis_wrap_avx.cpp  jarvis_wrap_avx512.cpp  merge_hull.cpp  merge_hull_rewrite.cpp  monotone_chain.cpp  monotone_chain.hpp  quickhull.cpp  quickhull_avx.cpp  quickhull_avx2.cpp  quickhull_avx512.cpp  quickhull_bf.cpp  quickhull_bf_par.cpp  quickhull_common.hpp  quickhull_early_sort_x.cpp  quickhull_hybrid.cpp  quickhull_no_x_partition.cpp  quickhull_par.cpp  quickhull_parallel.cpp  quickhull_rec.cpp  quickhull_rec2.cpp  quickhull_rec_par.cpp  quickhull_soa.cpp  quickhull_xy_partition.cpp  simd_utils.hpp
src/implementations/benchmarks/: sortvariants.cpp
src/implementations/chan_variants/: chan.cpp  chan_idea3.cpp  chan_idea_3.cpp  common.hpp  merge_hull.cpp  merge_hull_chan_trick.cpp  merge_hull_rewrite.cpp
src/implementations/ouellet/: OuelletHull.cpp  OuelletHull.h  OuelletPoint.h  readme.txt
testtools/: analyze_times.py  build_generators.sh  gen.py  gencirc.py  gensquare.py
testtools/generators/: gencirc.cpp  gendisk.cpp  generator.hpp  genmergekiller.cpp  gensquare.cpp  quickhull_killer.py  quickhull_killer2.py  quickhull_killer3.py  quickhull_killer_old.py
